--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </div>
     <header class="index-text">
       <h1>Welcom to kokoa clone</h1>
-      <p>If you have a KoKoa Account, log in with your email or phone number</p>
+      <p>
+        If you have a KoKoa Account, <br />log in with your email or phone
+        number
+      </p>
     </header>
     <form action="friends.html" method="get" id="login-form">
       <input type="text" placeholder="Email or phone number" required />
