--- a/more.html
+++ b/more.html
@@ -69,20 +69,20 @@
     </div>
     <div id="icon2">
       <div class="icon__item">
-        <i class="fa-solid fa-calendar-days"></i>
-        <span>Calender</span>
+        <i class="fa-solid fa-gift"></i>
+        <span>Gifts</span>
       </div>
       <div class="icon__item">
-        <i class="fa-solid fa-face-grin-wink"></i>
-        <span>Emoticons</span>
+        <i class="fa-solid fa-cart-shopping"></i>
+        <span>Shopping</span>
       </div>
       <div class="icon__item">
-        <i class="fa-solid fa-paint-roller"></i>
-        <span>Themes</span>
+        <i class="fa-brands fa-line"></i>
+        <span>Line</span>
       </div>
       <div class="icon__item">
-        <i class="fa-sharp fa-solid fa-file-invoice-dollar"></i>
-        <span>Account</span>
+        <i class="fa-solid fa-glasses"></i>
+        <span>Fassion</span>
       </div>
     </div>
     <div class="more-line-wrap">
