--- a/friends.html
+++ b/friends.html
@@ -47,7 +47,7 @@
     </div>
     <div id="friends-channel-content">
       <div class="friends-channel-content__left">
-        <img src="img/cream.jpg" />
+        <img src="img/kokoa-channel.png" />
         <span>Channel</span>
       </div>
       <div class="friends-channel-content__right">
@@ -57,7 +57,7 @@
     </div>
     <div class="friends-channel-content__habeen">
       <img src="img/cream.jpg" />
-      <span>Channel</span>
+      <span>Hyunkiwon</span>
     </div>
     <div class="kokoa-wrap">
       <i class="fa-solid fa-comment"></i>
